force-app/main/default/objects/Customer__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Number</label>
    <referenceTo>Account_Number__c</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>