force-app/main/default/objects/Customer__c/fields/Paystack_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Paystack_Customer_ID__c</fullName>
    <externalId>true</externalId>
    <label>Paystack Customer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>