force-app/main/default/objects/Customer__c/fields/Square_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Square_Customer_ID__c</fullName>
    <externalId>true</externalId>
    <label>Square Customer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>